--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ GUVI Calculator
   var divscreen =document.createElement("div");
   var screen =document.createElement("input");
   screen.id="result";
-  screen.value="c";
+  screen.value="";
   screen.onclick=function () {
         clr();
   };
